spring boot 4 jackson 3 java 25 ! Deployment changes (#192)
* spring boot 4 jackson 3 java 25

* lombok processing

* new webclient

* testcontainers 2

* trivy

* trivy and webclient error handling refactor

* remove feign

* exceptions and jooq

* db test fix

* db test fix